--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A Todo application",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel public/index.html",
     "test": "jest"
   },
   "author": "Sai Kumar P B",
