--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "author": "Sai Kumar P B",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@parcel/transformer-svg-react": "^2.8.2",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "buffer": "^5.7.1",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   }
