--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "custom.d.ts"],
+  "include": ["src", "src/custom.d.ts"],
   "compilerOptions": {
     "jsx": "react",
     "target": "es2016",
