--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "jest"
   },
   "author": "Sai Kumar P B",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saikumarpb/todo-react.git"
+  },
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
